Bug 191113 - digikam doesn't recognize images with colorspace adobergb
Summary: digikam doesn't recognize images with colorspace adobergb
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ColorManagement-Profiles (other bugs)
Version First Reported In: 0.10.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-30 08:13 UTC by Tobias Philipp
Modified: 2022-02-01 11:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.5.0
Sentry Crash Report:


Attachments
jpg Image with Interoperability Index: R03 - DCF option file (Adobe RGB) (521.87 KB, image/jpeg)
2009-04-30 09:27 UTC, Tobias Philipp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Philipp 2009-04-30 08:13:18 UTC
Version:           0.10.0-3 (using KDE 4.2.2)
OS:                Linux
Installed from:    SuSE RPMs

Hello,

I switched my camera (Pentax K200D) to store the jpeg images in the colorspace "Adobe RGB".
In the color tab in digikam 0.10 there is no color profile listed for this images. For my ohter image, taken before the color space switching, there is the color profile srgb listed.

Also the editor says, that the images have no color profile assigned and if i would like to convert them.

I have read through some forums: the color space adoboe rgb is correct saved as foloowing (exif data):
-ColorSpace=Uncalibrated
-InteropIndex=R03
-WhitePoint="0.313 0.329"
-PrimaryChromaticities="0.64 0.33 0.21 0.71 0.15 0.06" -YCbCrCoefficients="0.299 0.587 0.114"
-Gamma=2.2 

see
http://forum.penum.de/showthread.php?id=52744 (german)
or
http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/EXIF.html

These data is correct stored in my images (see below) but digikam doesn't recognize them as adobe rgb and display the images with wrong colors.

Digikam should recognize the images as adobe rgb as photoshop under win does.
gimp under linux and win are also failing.

Colormanagment in digikam is switched on and workspace profile is srgb.

Here is the exif data read with exiftool from one of the images:

ExifTool Version Number         : 7.42                              
File Name                       : eis_2009.01.06_17-52-28-002883.jpg
Directory                       : .                                 
File Size                       : 3.7 MB                            
File Modification Date/Time     : 2009:04:20 16:02:48               
File Type                       : JPEG                              
MIME Type                       : image/jpeg                        
Exif Byte Order                 : Big-endian (Motorola, MM)         
Processing Software             : digiKam-0.10.0-rc1                
Make                            : PENTAX                            
Camera Model Name               : PENTAX K200D                      
Orientation                     : Horizontal (normal)               
X Resolution                    : 72                                
Y Resolution                    : 72                                
Resolution Unit                 : inches                            
Software                        : K200D Ver 1.00                    
Modify Date                     : 2009:01:06 17:52:25               
Primary Chromaticities          : 0.64 0.33 0.21 0.71 0.15 0.06     
Y Cb Cr Coefficients            : 0.299 0.587 0.114                 
Y Cb Cr Positioning             : Co-sited                          
Exposure Time                   : 1/6                               
F Number                        : 13.0                              
Exposure Program                : Program AE                        
Exif Version                    : 0221                              
Date/Time Original              : 2009:01:06 17:52:25               
Create Date                     : 2009:01:06 17:52:25               
Components Configuration        : YCbCr                             
Flash                           : Off                               
Focal Length                    : 300.0 mm                          
Pentax Version                  : 4.1.2.0                           
Pentax Model Type               : 0                                 
Preview Image Size              : 640x480                           
Preview Image Length            : 26979                             
Preview Image Start             : 6112                              
Pentax Model ID                 : K200D                             
Date                            : 2009:01:06                        
Time                            : 17:52:25                          
Quality                         : Best                              
Flash Mode                      : Off; Internal                     
Focus Mode                      : Manual                            
AF Point Selected               : Lower-left                        
ISO                             : 200                               
Exposure Compensation           : +0.7                              
Metering Mode                   : Multi-segment                     
Auto Bracketing                 : 0 EV, No Extended Bracket         
White Balance                   : Auto                              
White Balance Mode              : Auto (Cloudy)                     
World Time Location             : Hometown                          
Hometown City                   : Berlin                            
Destination City                : Berlin                            
Hometown DST                    : Yes                               
Destination DST                 : Yes                               
DSP Firmware Version            : 1.00.00.03                        
CPU Firmware Version            : 1.00.00.03                        
Effective LV                    : 9.4                               
Image Processing                : Unprocessed                       
Picture Mode                    : Program; 1/3 EV steps             
Drive Mode                      : Single-frame; Self-timer (2 s); Shutter 
Button; Single Exposure
Preview Image Borders           : 26 26 0 0                                                      
Lens Type                       : Sigma Lens (3 255)                                             
Sensitivity Adjust              : 0                                                              
Image Processing Count          : 0                                                              
Camera Temperature              : 21 C                                                           
AE Lock                         : Off                                                            
Noise Reduction                 : Off                                                            
Flash Exposure Comp             : 0                                                              
Image Tone                      : Bright                                                         
SR Result                       : Not stabilized                                                 
Shake Reduction                 : Unknown (5)                                                    
SR Half Press Time              : 0.45 s                                                         
SR Focal Length                 : 300 mm                                                         
Shutter Count                   : 3269                                                           
Dynamic Range Expansion         : On                                                             
High ISO Noise Reduction        : Weak                                                           
AF Adjustment                   : 0                                                              
Black Point                     : 0 0 0 0                                                        
White Point                     : 14144 8192 8192 8800                                           
Picture Mode 2                  : Scene Mode                                                     
Program Line                    : Normal                                                         
EV Steps                        : 1/3 EV steps                                                   
E-Dial In Program               : P Shift                                                        
Aperture Ring Use               : Prohibited                                                     
Flash Options                   : Normal                                                         
Metering Mode 2                 : Multi-segment                                                  
AF Point Mode                   : Select                                                         
Focus Mode 2                    : Manual                                                         
AF Point Selected 2             : Lower-left                                                     
ISO Floor                       : 200                                                            
Drive Mode 2                    : Self-timer (2 s)                                               
Exposure Bracket Step Size      : 0.7                                                            
Bracket Shot Number             : n/a                                                            
White Balance Set               : Auto                                                           
Multiple Exposure Set           : Off                                                            
AE Exposure Time                : 1/5                                                            
AE Aperture                     : 12.3                                                           
AE ISO                          : 200                                                            
AE Xv                           : -0.625                                                         
AEB Xv                          : 0                                                              
AE Min Exposure Time            : 1/3862                                                         
AE Program Mode                 : Sv or Green Mode                                               
AE Max Aperture                 : 5.7                                                            
AE Max Aperture 2               : 6.2                                                            
AE Min Aperture                 : 32                                                             
AE Metering Mode                : Multi-segment                                                  
Flash Exposure Comp Set         : 0                                                              
Auto Aperture                   : On                                                             
Min Aperture                    : 22                                                             
Lens F Stops                    : 8.5                                                            
Nominal Max Aperture            : 5.7                                                            
Nominal Min Aperture            : 32                                                             
Max Aperture                    : 5.5                                                            
Flash Status                    : Off                                                            
Internal Flash Mode             : Off, Normal                                                    
External Flash Mode             : Off                                                            
Internal Flash Strength         : 81                                                             
TTL DA A Up                     : 0                                                              
TTL DA A Down                   : 0                                                              
TTL DA B Up                     : 0                                                              
TTL DA B Down                   : 0                                                              
External Flash Guide Number     : n/a                                                            
External Flash Exposure Comp    : n/a                                                            
External Flash Bounce           : n/a                                                            
AE Metering Segments            : 8.6 8.5 8.8 8.8 8.5 8.2 8.5 8.0 8.4 7.9 8.5 
8.0 8.2 8.0 8.5 8.0
Flash Metering Segments         : 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                
Slave Flash Metering Segments   : 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                
WB RGGB Levels Daylight         : 13824 8192 8152 10558                                          
WB RGGB Levels Shade            : 16128 8192 8152 8100                                           
WB RGGB Levels Cloudy           : 14560 8192 8152 9375                                           
WB RGGB Levels Tungsten         : 8192 8192 8152 23301                                           
WB RGGB Levels Fluorescent D    : 17376 8192 8152 9830                                           
WB RGGB Levels Fluorescent N    : 14528 8192 8152 11195                                          
WB RGGB Levels Fluorescent W    : 13088 8192 8152 13562                                          
WB RGGB Levels Flash            : 13824 8192 8152 10558                                          
Manufacture Date                : 2008:05:15                                                     
Production Code                 : 2.3                                                            
Internal Serial Number          : 284707                                                         
Power Source                    : Body Battery                                                   
Battery States                  : 4 1                                                            
Battery AD Body No Load         : 132                                                            
Battery AD Body Load            : 112                                                            
Battery AD Grip No Load         : 3                                                              
Battery AD Grip Load            : 3                                                              
AF Predictor                    : 30                                                             
AF Defocus                      : 21                                                             
AF Integration Time             : 8 ms                                                           
AF Points In Focus              : Lower-left, Bottom                                             
WB Shift AB                     : 0                                                              
WB Shift MG                     : 0                                                              
Flashpix Version                : 0100                                                           
Color Space                     : Uncalibrated                                                   
Exif Image Width                : 3872                                                           
Exif Image Height               : 2592                                                           
Interoperability Index          : R03 - DCF option file (Adobe RGB)                              
Interoperability Version        : 0100                                                           
Sensing Method                  : One-chip color area                                            
File Source                     : Digital Camera                                                 
Scene Type                      : Directly photographed                                          
Custom Rendered                 : Normal                                                         
Exposure Mode                   : Manual                                                         
Focal Length In 35mm Format     : 450 mm                                                         
Scene Capture Type              : Standard                                                       
Contrast                        : High                                                           
Saturation                      : Low                                                            
Sharpness                       : Hard                                                           
Subject Distance Range          : Close                                                          
Gamma                           : 2.2                                                            
GPS Version ID                  : 2.0.0.0                                                        
GPS Latitude Ref                : North                                                          
GPS Longitude Ref               : East                                                           
GPS Altitude Ref                : Above Sea Level                                                
GPS Map Datum                   : WGS-84                                                         
Compression                     : JPEG (old-style)                                               
Thumbnail Offset                : 6440                                                           
Thumbnail Length                : 6464                                                           
Date/Time Modified              : 2009:01:06 17:52:25                                            
Creator Tool                    : digiKam-0.10.0-rc1                                             
Metadata Date                   : 2009:01:06 17:52:25                                            
Authors Position                :                                                                
Artist                          : Tobias Philipp                                                 
Copyright                       : Tobias Philipp                                                 
Subject                         : Makro, Natur, Sonnenuntergang                                  
Creator                         : Tobias Philipp                                                 
Rights                          : Tobias Philipp                                                 
Originating Program             : digiKam                                                        
Program Version                 : 0.10.0-rc1                                                     
By-line                         : Tobias Philipp
By-line Title                   :
Credit                          : Tobias Philipp
Source                          : Tobias Philipp
Copyright Notice                : Tobias Philipp
Date Created                    : 2009:01:06
Time Created                    : 17:52:25+00:00
Keywords                        : Makro, Natur, Sonnenuntergang
Image Width                     : 3872
Image Height                    : 2592
Encoding Process                : Baseline DCT, Huffman coding
Bits Per Sample                 : 8
Color Components                : 3
Y Cb Cr Sub Sampling            : YCbCr4:2:2 (2 1)
Aperture                        : 13.0
Date/Time Created               : 2009:01:06 17:52:25+00:00
GPS Altitude                    : 176 m Above Sea Level
GPS Latitude                    : 49 deg 11' 32.55" N
GPS Longitude                   : 8 deg 5' 16.33" E
GPS Position                    : 49 deg 11' 32.55" N, 8 deg 5' 16.33" E
Image Size                      : 3872x2592
Lens ID                         : Sigma DL Zoom 75-300mm F4-5.6
Preview Image                   : (Binary data 26979 bytes, use -b option to 
extract)
Scale Factor To 35 mm Equivalent: 1.5
Shutter Speed                   : 1/6
Thumbnail Image                 : (Binary data 6464 bytes, use -b option to 
extract)
Circle Of Confusion             : 0.020 mm
Field Of View                   : 4.6 deg
Focal Length                    : 300.0 mm (35 mm equivalent: 450.0 mm)
Hyperfocal Distance             : 345.62 m
Light Value                     : 9.0

best regards
tobias philipp
Comment 1 caulier.gilles 2009-04-30 09:02:34 UTC
This is relevant of Exiv2 library in first. Which Exiv2 release you use ?

Please give us an image sample to test. 

Gilles Caulier
Comment 2 Tobias Philipp 2009-04-30 09:27:00 UTC
Created attachment 33236 [details]
jpg Image with Interoperability Index: R03 - DCF option file (Adobe RGB)



This is a image which has no entries in the color tab in digikam.
Comment 3 Tobias Philipp 2009-04-30 09:28:33 UTC
(In reply to comment #1)
> This is relevant of Exiv2 library in first. Which Exiv2 release you use ?
> 
> Please give us an image sample to test. 
> 
> Gilles Caulier

rpm -qa | grep exiv
libkexiv2-3-0.1.7-49.21
libkexiv2-7-4.2.0-68.8
libexiv2-4-0.17.1-31.3

this is on work.
on my homepc i have the recent version from http://download.opensuse.org/repositories/KDE:/42/openSUSE_11.1/x86_64/ with the same results.
Comment 4 Marcel Wiesweg 2009-09-04 17:22:23 UTC
Is reading the "R03" tag and using AdobeRGB(1998) sufficient or do we have to check the whitepoint, gamma and primary chromaticity?
Comment 5 Marcel Wiesweg 2009-09-04 17:37:42 UTC
SVN commit 1019840 by mwiesweg:

Interpret the Exif.Iop.InteroperabilityIndex and Exif.Nikon3.ColorSpace
for AdobeRGB images when main color space is set to uncalibrated.

BUG: 191113
CCBUG: 195050


 M  +17 -2     kexiv2image.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019840