Interpret the Exif.Iop.InteroperabilityIndex and Exif.Nikon3.ColorSpace for AdobeRGB images when main color space is set to uncalibrated.

BUG: 191113
CCBUG: 195050

svn path=/trunk/KDE/kdegraphics/libs/libkexiv2/; revision=1019840